@@ -1,3 +1,12 @@
+2006-04-11  Peter Spjuth  <peter.spjuth@space.se>
+
+	* generic/tkWindow.c (Tk_NameToWindow): Allow NULL interp to
+	Tk_NameToWindow. This fixes TkGetWindowFromObj which promises to
+	handle NULL but didn't.
+	
+	* generic/tkGrid.c: Fixed handling of out of bounds row or column.
+	* tests/grid.test:  [Bug 1432666]
+
 2006-04-11  Don Porter  <dgp@users.sourceforge.net>
 
 	* unix/Makefile.in:	Updated `make dist` target to be sure the
